deploy/manifests/ingresses/cockroachdb-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: database-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: gitrello.me
      http:
        paths:
        - path: /
          backend:
            serviceName: cockroachdb-public
            servicePort: 8080
        - path: /
          backend:
            serviceName: cockroachdb-public
            servicePort: 26257
